# dashboard

./: .gitmodules
back/: .gitignore  Cargo.toml  README.md  start.sh
back/config/: config.toml  server.toml
back/diesel_derive/: Cargo.toml
back/diesel_derive/src/: lib.rs
back/docker/: Dockerfile  docker-compose.yml
back/migrations/2018-08-08-143409_create_transactions/: up.sql
back/migrations/2018-08-13-162409_create_capitalization/: down.sql  up.sql
back/migrations/2018-08-13-162409_create_capitalizations/: down.sql  up.sql
back/migrations/2018-08-13-162409_create_coin_market_cap_values/: down.sql  up.sql
back/migrations/2018-08-15-190919_add_tx_hash_unique_index/: down.sql  up.sql
back/migrations/2018-08-16-061100_update_coin_market_cap_values/: down.sql  up.sql
back/migrations/2018-08-17-203706_remove_txs_index/: down.sql
back/src/: application.rs  coinmarketcap_fetcher.rs  config.rs  environment.rs  errors.rs  fetcher.rs  lib.rs  main.rs  schema.rs  server.rs  transactions.rs  types.rs
back/src/client/: error.rs  mod.rs
back/src/client/ethereum/: mod.rs  responses.rs
back/src/clients/: mod.rs
back/src/clients/ethereum/: error.rs  mod.rs  responses.rs
back/src/controller/: mod.rs  routes.rs
back/src/fetchers/: ethereum.rs  mod.rs
back/src/fetchers/coinmarketcap/: error.rs  mod.rs
back/src/fetchers/ethereum/: error.rs  mod.rs
back/src/http/: error.rs  mod.rs
back/src/models/: capitalization.rs  coinmarketcap.rs  ethereum.rs  mod.rs
back/src/repos/: capitalization.rs  capitalizations.rs  coinmarketcap.rs  error.rs  mod.rs  transactions.rs
back/src/services/: capitalization.rs  coinmarketcap.rs  error.rs  ethereum.rs  mod.rs  types.rs
back/src/services/ethereum/: accounts.rs  error.rs  mod.rs
front/: .babelrc  .flowconfig  .gitignore  README.md  package.json
front/public/: index.html
front/src/: index.html  index.js  index.scss
front/src/components/CommunityInfo/: CommunityInfo.js  CommunityInfo.scss  index.js  mock.js
front/src/types/: index.js
front/src/utils/: apiClient.js  formatNumValue.js  formatNumValueWithCurrency.js  formatNumber.js  index.js
(+22 files in other folders)
