[package]
name = "dashboard"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]

[lib]
name = "dashboard_core"

[dependencies]
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.12"
hyper-tls = "0.2"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
env_logger = "0.5"
log = "0.4"
tokio = "0.1.7"
bigdecimal = { version = "0.0.11", features = ["serde"] }
diesel_derive = { path = "./diesel_derive" }
diesel = { version = "1.3.2", features = ["postgres", "numeric"] }
r2d2 = "0.8.1"
r2d2-diesel = "1.0.0"
